Added colour specification in line with tfl guideline

--- a/Underground/MainPage.xaml
+++ b/Underground/MainPage.xaml
@@ -7,7 +7,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Name="UndergroundMainPage"
-    Loaded="MainPage_OnLoaded">
+    Loaded="MainPage_OnLoaded"
+    Loading="MainPage_OnLoading">
 
     <Grid Name="MyMainGrid">
         <Grid.RowDefinitions>
@@ -23,9 +24,7 @@
                     Click="HamburgerButton_OnClick"
                     Background="#33270303"
                     HorizontalAlignment="Center">
-                <!--<Button.RenderTransform>
-                    <CompositeTransform Rotation="0"/>
-                </Button.RenderTransform>-->
+                
             </Button>
         </RelativePanel>
 
@@ -241,10 +240,19 @@
                            HorizontalAlignment="Left"
                            VerticalAlignment="Top"
                            TextAlignment="Left" />
+                
+                
             </Grid>
 
         </SplitView>
-
+        <ProgressRing Grid.Row="1"
+                      Height="100"
+                      Width="100"
+                      Foreground="Gray"
+                      VerticalAlignment="Center"
+                      HorizontalAlignment="Center"
+                      Name="MyProgressRing"/>
     </Grid>
+    
 
 </Page>
