--- a/Underground/MainPage.xaml
+++ b/Underground/MainPage.xaml
@@ -7,16 +7,16 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Name="UndergroundMainPage"
-    Loaded="MainPage_OnLoaded"
-    Loading="MainPage_OnLoading">
+    Loaded="MainPage_OnLoaded">
 
-    <Grid Name="MyMainGrid">
+    <Grid Name="MyMainGrid"
+          Background="Black">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <RelativePanel Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <RelativePanel Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" RequestedTheme="Dark">
             <Button Name="HamburgerButton"
                     FontFamily="Segoe MDL2 Assets"
                     Content="&#xE700;"
@@ -24,7 +24,6 @@
                     Click="HamburgerButton_OnClick"
                     Background="#33270303"
                     HorizontalAlignment="Center">
-                
             </Button>
         </RelativePanel>
 
@@ -34,7 +33,7 @@
                    CompactPaneLength="56"
                    HorizontalAlignment="Left"
                    Grid.Row="1"
-                   PaneClosed="MySplitView_PaneClosed" Width="360">
+                   Width="360">
             <SplitView.Pane>
                 <ListBox SelectionMode="Single"
                          Name="IconListBox"
@@ -199,9 +198,6 @@
                 </ListBox>
 
             </SplitView.Pane>
-            <!--<SplitView.Content>
-               
-            </SplitView.Content>-->
             <Grid Background="Transparent"
                   Name="ResultGrid">
                 <Grid.ColumnDefinitions>
@@ -211,10 +207,11 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
+                    <RowDefinition Height="50" />
                 </Grid.RowDefinitions>
                 <TextBlock Grid.Row="0"
                            Grid.Column="0"
-                           Text="Title"
+                           Text=""
                            TextWrapping="Wrap"
                            Name="TitleTextBlock"
                            FontSize="30"
@@ -224,7 +221,7 @@
                            Margin="10,10,5,0" />
                 <TextBlock Grid.Row="1"
                            Name="DetailsTextBlock"
-                           Text="Details"
+                           Text=""
                            TextWrapping="Wrap"
                            FontSize="25"
                            FontStyle="Italic"
@@ -233,17 +230,24 @@
                            HorizontalAlignment="Left" />
                 <TextBlock Grid.Row="2"
                            Name="ReasonTextBlock"
-                           Text="Reason"
+                           Text=""
                            TextWrapping="Wrap"
                            FontSize="20"
                            Margin="10,3,5,10"
                            HorizontalAlignment="Left"
                            VerticalAlignment="Top"
                            TextAlignment="Left" />
-                
-                
-            </Grid>
+                <TextBlock Grid.Row="3"
+                           Name="Credits"
+                           Text="Powered by TfL Open Data"
+                           TextWrapping="Wrap"
+                           FontSize="10"
+                           Margin="10,3,5,10"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           TextAlignment="Center" />
 
+            </Grid>
         </SplitView>
         <ProgressRing Grid.Row="1"
                       Height="100"
@@ -253,6 +257,4 @@
                       HorizontalAlignment="Center"
                       Name="MyProgressRing"/>
     </Grid>
-    
-
 </Page>
